[M] ChandleChart with apexChart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<p>Hi world!<p>
+<div class="my-5" style="height: 1000px;">
+    <apx-chart [series]="chartOptions.series" [chart]="chartOptions.chart" [xaxis]="chartOptions.xaxis"
+        [title]="chartOptions.title" [tooltip]="chartOptions.tooltip" [stroke]="chartOptions.stroke"></apx-chart>
+</div>
