[M] New Chart Libary

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <div class="my-5" style="height: 1000px;">
-    <apx-chart [series]="chartOptions.series" [chart]="chartOptions.chart" [xaxis]="chartOptions.xaxis"
-        [title]="chartOptions.title" [tooltip]="chartOptions.tooltip" [stroke]="chartOptions.stroke"></apx-chart>
+    <highcharts-chart 
+    [Highcharts]="Highcharts"
+
+    [options]="chartOptions"
+  
+    style="height: 100%; display: block;"
+  ></highcharts-chart>
 </div>
